WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243781
[GStreamer] REGRESSION(
253289@main
): Broke debug builds
https://bugs.webkit.org/show_bug.cgi?id=243781
Summary
[GStreamer] REGRESSION(253289@main): Broke debug builds
Adrian Perez
Reported
2022-08-10 05:11:19 PDT
/app/webkit/WebKitBuild/Debug/WTF/Headers/wtf/Ref.h:119:52: error: invalid argument type 'WebCore::VideoFrameGStreamer' to unary expression bool operator!() const { ASSERT(m_ptr); return !*m_ptr; } ^~~~~~~ /app/webkit/Source/WebCore/platform/mediastream/RealtimeVideoSource.cpp:195:5: note: in instantiation of member function 'WTF::Ref<WebCore::VideoFrameGStreamer>::operator!' requested here ASSERT(newVideoFrame); ^
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2022-08-10 05:12:38 PDT
I suppose the assertion should be moved into PLATFORM(COCOA). Another option would be to explicitly declare the variable as RefPtr<VideFrameGStreamer> instead of using “auto” to avoid the compiler deducing it can use Ref<T>. I am not sure what option is preferred in this case.
Adrian Perez
Comment 2
2022-08-10 05:41:34 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3190
Philippe Normand
Comment 3
2022-08-10 06:16:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3192
EWS
Comment 4
2022-08-10 08:17:52 PDT
Committed
253296@main
(ec1e02abd6f9): <
https://commits.webkit.org/253296@main
> Reviewed commits have been landed. Closing PR #3192 and removing active labels.
Radar WebKit Bug Importer
Comment 5
2022-08-10 08:18:16 PDT
<
rdar://problem/98451754
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug