[GStreamer] REGRESSION(253289@main): Broke debug builds https://bugs.webkit.org/show_bug.cgi?id=243781

Reviewed by NOBODY (OOPS!).

* Source/WebCore/platform/mediastream/RealtimeVideoSource.cpp:
(WebCore::RealtimeVideoSource::adaptVideoFrame): Explicitly use
RefPtr<VideoFrameGStreamer> instead of letting the compiler guess.