Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.h
@@ -53,7 +53,7 @@ public:
     static Ref<VideoFrameGStreamer> createFromPixelBuffer(Ref<PixelBuffer>&&, CanvasContentType canvasContentType, Rotation videoRotation, const MediaTime& presentationTime = MediaTime::invalidTime(), const IntSize& destinationSize = { }, double frameRate = 1, bool videoMirrored = false, std::optional<VideoFrameTimeMetadata>&& metadata = std::nullopt);
 
 
-    Ref<VideoFrameGStreamer> resizeTo(const IntSize&);
+    RefPtr<VideoFrameGStreamer> resizeTo(const IntSize&);
 
     GstSample* sample() const { return m_sample.get(); }
     RefPtr<JSC::Uint8ClampedArray> computeRGBAImageData() const;
